--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,8 @@
 @charset "utf-8";
 
-*,
-.first-view{
+.first-view {
     height: calc(100vh - 110px);
-    background-image: url(../images/index/bg-main.jpg);
+    background-image: url(../images/index/bg_main.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -11,33 +10,35 @@
     align-items: center;
 }
 
-.first-view-text{
+.first-view-text {
     width: 100%;
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 40px;
+    padding-left: 40ox;
     padding-bottom: 80px;
     color: #ffffff;
     font-weight: bold;
     text-shadow: 1px 1px 10px #4b2c14;
 }
 
-.first-view-text hl{
-    font-family: 'Montserrat', sans-serif;
+.first-view-text h1 {
+    font-family: "Montserrat", sans-serif;
     font-size: 56px;
     line-height: 72px;
 }
 
-.first-view-text p{
+.first-view-text p {
     font-size: 18px;
     margin-top: 20px;
 }
 
-.lead{
+.lead {
     max-width: 1200px;
     margin: 60px auto;
 }
+
+*,
 ::before,
 ::after {
     padding: 0;
@@ -97,51 +98,38 @@ img {
 }
 
 .site-menu ul li a {
-    font-family: "Zen Kurenaido", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    font-family: 'Cherry Bomb One', cursive;
 }
 
-@media (max-width: 800px){
-    .site-menu ul{
+@media (max-width: 800px) {
+    .site-menu ul {
         display: block;
         text-align: center;
     }
 
-    .site-menu li{
+    .site-menu li {
         margin-top: 20px;
     }
 
-    .header{
+    .header {
         position: fixed;
         top: 0;
         left: 0;
         right: 0;
         background-color: #ffffff;
-        height: 50ps;
+        height: 50px;
         z-index: 10;
-        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);  }
-    
-    .header-inner{
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .header-inner {
         padding-left: 20px;
         padding-right: 20px;
         height: 100%;
     }
 
-    .header-logo{
+    .header-logo {
         width: 100px;
-    }
-
-    .main{
-        padding-top: 50px;
-    }
-
-    .footer-logo{
-        margin-top: 60px;
-    }
-
-    .copyright{
-        margin-top: 50px;
     }
 }
 
@@ -162,7 +150,7 @@ img {
 }
 
 .copyright {
-    font-size: 14px;
+    font-size: 14pt;
     font-weight: bold;
     margin-top: 90px;
 }
