--- a/css/common.css
+++ b/css/common.css
@@ -60,50 +60,49 @@ img {
 }
 
 .site-menu ul li a {
-    font-family: "Zen Kurenaido", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    font-family: 'Cherry Bomb One', cursive;
 }
 
-@media (max-width: 800px){
-    .site-menu ul{
+@media (max-width: 800px) {
+    .site-menu ul {
         display: block;
         text-align: center;
     }
 
-    .site-menu li{
+    .site-menu li {
         margin-top: 20px;
     }
 
-    .header{
+    .header {
         position: fixed;
         top: 0;
         left: 0;
         right: 0;
         background-color: #ffffff;
-        height: 50ps;
+        height: 50px;
         z-index: 10;
-        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);  }
-    
-    .header-inner{
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .header-inner {
         padding-left: 20px;
         padding-right: 20px;
         height: 100%;
     }
 
-    .header-logo{
+    .header-logo {
         width: 100px;
     }
 
-    .main{
-        padding-top: 50px;
+    .main {
+        padding-top: 50px;;
     }
 
-    .footer-logo{
+    .footer-logo {
         margin-top: 60px;
     }
 
-    .copyright{
+    .copyright {
         margin-top: 50px;
     }
 }
@@ -125,7 +124,51 @@ img {
 }
 
 .copyright {
-    font-size: 14px;
+    font-size: 14pt;
     font-weight: bold;
     margin-top: 90px;
+}
+
+@media (max-width: 800px) {
+    .site-menu ul {
+        display: block;
+        text-align: center;
+    }
+
+    .site-menu li {
+        margin-top: 20px;
+    }
+
+    .header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        background-color: #ffffff;
+        height: 50px;
+        z-index: 10;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .header-inner {
+        padding-left: 20px;
+        padding-right: 20px;
+        height: 100%;
+    }
+
+    .header-logo {
+        width: 100px;
+    }
+
+    .main {
+        padding-top: 50px;
+    }
+
+    .footer-logo {
+        margin-top: 60px;
+    }
+
+    .copyright {
+        margin-top: 50px;
+    }
 }
